added user manager classes

--- a/IdentityJWT.API/IdentityJWT.API.csproj
+++ b/IdentityJWT.API/IdentityJWT.API.csproj
@@ -20,5 +20,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\IdentityJWT.Shared\IdentityJWT.Shared.csproj" />
+  </ItemGroup>
+
 
 </Project>
